--- a/client/src/Resources/css/styles.css
+++ b/client/src/Resources/css/styles.css
@@ -114,6 +114,7 @@ button {
     margin-top: 10px;
     font-family: 'Oswald', sans-serif;
     font-size: 16px;
+    border-style: none;
 }
 
 .error_label {
