--- a/client/src/Resources/css/styles.css
+++ b/client/src/Resources/css/styles.css
@@ -5,13 +5,9 @@ body {
     color: #404040;
 }
 
-.container {
-    width:1100px;
-    margin: 0 auto;
-}
+
 .page_container {
     min-height: 75vh;
-    padding-top: 85px;
 }
 .main_loader {
     text-align: center;
@@ -251,7 +247,7 @@ header {
     border-bottom: 1px solid white;
 }
 
-header .logo {
+header .logo, .navbar-brand {
     font-family: 'Monoton', cursive;
     color: #ffffff;
     font-size: 40px;
@@ -327,8 +323,8 @@ footer .logo {
     border-bottom: 1px solid #4d4d4d;
 }
 
-footer .wrapper {
-    display: flex;
+footer .container {
+
     color: #828282;
 }
 
@@ -492,6 +488,20 @@ footer .business_nfo .nfo {
     font-size: 17px;
     font-weight: 700;
     color: #2196F3;
+}
+
+.brand {
+    text-align: center;
+    margin: 5px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.price {
+    text-align: right;
+    margin: 5px;
+    font-size: 17px;
+    font-weight: 300;
 }
 
 .card_item_wrapper .tags .name {
@@ -899,3 +909,34 @@ footer .business_nfo .nfo {
 .forgot_password_link {
     color: blue;
 }
+
+/*=============================
+         PAGINATOR
+===============================*/
+
+.paginator__controls {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .paginator__control {
+    width: 5rem;
+    padding: 0.25rem 0;
+    margin: 0 1rem;
+    border: 1px solid #3b0062;
+    background: transparent;
+    font: inherit;
+    cursor: pointer;
+    font-size: 1rem;
+    color: #3b0062;
+  }
+  
+  .paginator__control:hover,
+  .paginator__control:active {
+    color: #fab83f;
+    border-color: #fab83f;
+  }
+  
+  .paginator__control:focus {
+    outline: none;
+  }
