--- a/client/src/Resources/css/styles.css
+++ b/client/src/Resources/css/styles.css
@@ -73,21 +73,7 @@ a {
     clear: both;
 }
 
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
 
 /*============================
             FORM
@@ -793,13 +779,13 @@ footer .business_nfo .nfo {
     padding: 0 0 0 29px;
 }
 
-.user_container .user_nfo_panel {
+.user_nfo_panel {
     background: #f8f8f8;
     padding: 20px;
     margin-top: 20px;
 }
 
-.user_container .user_nfo_panel h1 {
+.user_nfo_panel h1 {
     margin: 0 0 20px 0;
     line-height: 32px;
     text-transform: uppercase;
@@ -807,7 +793,7 @@ footer .business_nfo .nfo {
 }
 
 
-.user_container .user_nfo_panel span{
+.user_nfo_panel span{
     display: block;
     font-size: 18px;
     font-weight: 300;
@@ -909,34 +895,3 @@ footer .business_nfo .nfo {
 .forgot_password_link {
     color: blue;
 }
-
-/*=============================
-         PAGINATOR
-===============================*/
-
-.paginator__controls {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .paginator__control {
-    width: 5rem;
-    padding: 0.25rem 0;
-    margin: 0 1rem;
-    border: 1px solid #3b0062;
-    background: transparent;
-    font: inherit;
-    cursor: pointer;
-    font-size: 1rem;
-    color: #3b0062;
-  }
-  
-  .paginator__control:hover,
-  .paginator__control:active {
-    color: #fab83f;
-    border-color: #fab83f;
-  }
-  
-  .paginator__control:focus {
-    outline: none;
-  }
